# linked-markdown-py

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/linked_markdown/: __init__.py  errors.py  extract.py  links.py  parser.py  rdf.py  types.py
src/linked_markdown_py/: __init__.py  exceptions.py  extract.py  parse.py
tests/: test_conformance.py  test_extract.py  test_parse.py  test_rdf.py
