[project]
name = "linked-markdown"
version = "0.1.0"
description = "Linked Markdown reference implementation for Python"
readme = "README.md"
authors = [
    { name = "Ethan Davidson", email = "31261035+EthanThatOneKid@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/wazootech/linked-markdown"
Source = "https://github.com/wazootech/linked-markdown-py"
Tracker = "https://github.com/wazootech/linked-markdown-py/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"
